k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw2-app
  template:
    metadata:
      labels:
        app: hw2-app
    spec:
      containers:
      - name: hw2-container
        image: mokarski/k8s-hw2-service:v1  # Полный путь к образу
        ports:
        - containerPort: 8000  # По заданию
        livenessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 2
          periodSeconds: 5
