k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw2-service
spec:
  selector:
    app: hw2-app
  ports:
    - protocol: TCP
      port: 8000  # По заданию
      targetPort: 8000
