k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: hw2-service
            port:
              number: 8000
      - path: /otusapp/studentname/(.*)
        pathType: Prefix
        backend:
          service:
            name: hw2-service
            port:
              number: 8000
